describe("helper js <softkey_panel_helper> test",()=>{const{wrap:o}=require("jest-snapshot-serializer-raw"),s=jest.fn(),t=jest.fn(),n={back:s,front:t},i=jest.fn();let p=null;beforeAll(e=>{require("../../mock/l10n_mock"),require("../../mock/lazyLoader_mock"),require("../../mock/softkey_register_mock"),require("../../../js/helper/softkey/softkey_panel"),require("../../../js/helper/softkey/softkey_panel_helper"),e()}),test("SoftkeyHelper should be object",e=>{expect(typeof window.SoftkeyHelper).toBe("object"),e()}),test("SoftkeyHelper.init should be function",e=>{expect(typeof window.SoftkeyHelper.init).toBe("function"),e()}),test("SoftkeyHelper.updateSoftkey should be function",e=>{expect(typeof window.SoftkeyHelper.updateSoftkey).toBe("function"),e()}),test("SoftkeyHelper.show should be function",e=>{expect(typeof window.SoftkeyHelper.show).toBe("function"),e()}),test("SoftkeyHelper.onlyHide should be function",e=>{expect(typeof window.SoftkeyHelper.onlyHide).toBe("function"),e()}),test("SoftkeyHelper.hide should be function",e=>{expect(typeof window.SoftkeyHelper.hide).toBe("function"),e()}),test("SoftkeyHelper.getSoftkey should be function",e=>{expect(typeof window.SoftkeyHelper.getSoftkey).toBe("function"),e()}),test("SoftkeyHelper.register should be function",e=>{expect(typeof window.SoftkeyHelper.register).toBe("function"),e()}),test("SoftkeyHelper.register should return applist",e=>{var t="test";SoftkeyHelper.register(n,t),expect(SoftkeyHelper.applist.length).toBe(1),SoftkeyHelper.register({},t),expect(SoftkeyHelper.applist.length).toBe(1),SoftkeyHelper.register(n,"test1"),expect(SoftkeyHelper.applist.length).toBe(2),expect(s).toBeCalledTimes(1),e()}),describe("SoftkeyHelper.init",()=>{beforeEach(e=>{var t={menuClassName:"menu-button",header:{name:"Ring"},items:[{l10nId:"ringer-dismiss",priority:3,method:jest.fn()}]};SoftkeyHelper.init(t,i),p=SoftkeyHelper.getSoftkey(),e()}),test("SoftkeyHelper.init should create soft key panel",e=>{expect(o(p.form)).toMatchSnapshot(),expect(o(p.buttonLsk)).toMatchSnapshot(),expect(o(p.buttonCsk)).toMatchSnapshot(),expect(o(p.buttonRsk)).toMatchSnapshot(),expect(typeof p.show).toBe("function"),expect(typeof p.hide).toBe("function"),expect(p.form.classList.contains("visible")).toBeTruthy(),expect(p.form.classList.contains("focused")).toBeTruthy(),e()}),test("HelperEvent should show/hide softkey form",e=>{window.dispatchEvent(new KeyboardEvent("keydown",{type:"keydown",key:"Backspace"})),window.dispatchEvent(new KeyboardEvent("keydown",{type:"keydown",key:"BrowserBack"})),expect(i).toBeCalledTimes(2),window.dispatchEvent(new CustomEvent("lockscreen-appopened",{type:"lockscreen-appopened"})),expect(p.form.classList.contains("visible")).toBeFalsy(),expect(p.form.classList.contains("focused")).toBeFalsy(),window.dispatchEvent(new CustomEvent("lockscreen-appclosed",{type:"lockscreen-appclosed"})),expect(p.form.classList.contains("visible")).toBeTruthy(),expect(p.form.classList.contains("focused")).toBeTruthy(),window.dispatchEvent(new CustomEvent("screenchange",{type:"screenchange",detail:{screenEnabled:!1}})),expect(p.form.classList.contains("visible")).toBeFalsy(),expect(p.form.classList.contains("focused")).toBeFalsy(),e()}),test("SoftkeyHelper.show should show form",e=>{window.SoftkeyHelper.show(),expect(p.form.classList.contains("visible")).toBeTruthy(),expect(p.form.classList.contains("focused")).toBeTruthy(),e()}),test("SoftkeyHelper.onlyHide should hide form",e=>{window.SoftkeyHelper.onlyHide(),expect(p.form.classList.contains("visible")).toBeFalsy(),expect(p.form.classList.contains("focused")).toBeFalsy(),e()}),test("SoftkeyHelper.hide should hide form",e=>{SoftkeyHelper.register(n,"test"),SoftkeyHelper.register(n,"test1"),expect(window.SoftkeyHelper.applist.length).toBe(2),window.SoftkeyHelper.hide("test1"),expect(p.form.classList.contains("visible")).toBeFalsy(),expect(p.form.classList.contains("focused")).toBeFalsy(),expect(window.SoftkeyHelper.applist.length).toBe(1),expect(t).toBeCalledTimes(1),e()}),test("SoftkeyHelper.updateSoftkey should update Softkey panel",e=>{var t={items:[{l10nId:"ringer-dismiss",priority:2,method:jest.fn()},{l10nId:"ringer-dismiss",priority:3,method:jest.fn()}]};window.SoftkeyHelper.updateSoftkey(t,"1","new-ringer-dismiss1"),window.SoftkeyHelper.updateSoftkey(t,"2","new-ringer-dismiss2"),window.SoftkeyHelper.updateSoftkey(t,"3","new-ringer-dismiss3"),expect(o(p.form)).toMatchSnapshot(),expect(o(p.buttonLsk)).toMatchSnapshot(),expect(o(p.buttonCsk)).toMatchSnapshot(),expect(o(p.buttonRsk)).toMatchSnapshot(),e()})})});